<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryText">

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />


    <TextView
        android:id="@+id/txtValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:padding="@dimen/pd_5px"
        android:text="@string/title_activity_main"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/value_size" />

    <LinearLayout
        android:id="@+id/layControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txtValue"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/btnCopyToClipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/copy_to_clipboard"
            android:text="@string/copy_to_clipboard"
            android:textSize="@dimen/control_value"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLinkto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/external_link"
            android:text="@string/search_by_google"
            android:textSize="@dimen/control_value"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnGoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/circled_right"
            android:text="@string/go_to"
            android:textSize="@dimen/control_value"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imgScan"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:src="@mipmap/ic_barcode_button" />


</RelativeLayout>